# Assignment-Organizer

./: .gitignore  README.md  clsapp.py  courses.json  credentials.json  due_tasks.json  forms.py  main.py  pyproject.toml  save_data.py  script.js  token.pickle
Homework-Organizer/: HomePage.html  assignments.html  courses.html  courses2.html  index.html  script.js
Homework-Organizer/Login-SignUp-Page/: HomePage.html
static/: main.css
templates/: about.html  assignments.html  connect.html  courses.html  courses2.html  home.html  layout.html  register.html
